# WebProject

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  auth.py  board.py  cards.py  chat.py  columns.py  files.py  projects.py  system.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: auth.py  board.py  card.py  chat.py  file.py  project.py  system.py  user.py
backend/app/services/: bus.py  events.py  redis.py  security.py
backend/app/utils/: permissions.py
backend/app/websocket/: handlers.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthPanel.tsx  BoardView.tsx  CardDetailsDrawer.tsx  ChatPanel.tsx  ColumnCreator.tsx  FilePanel.tsx  ProjectSidebar.tsx
frontend/src/hooks/: useRealtime.ts
frontend/src/lib/: socket.ts
frontend/src/store/: auth.ts  board.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.tsx
